<resources>
    <string name="app_name">IEEE CUSB</string>
    <string name="Email_EditText">Email</string>
    <string name="Password_EditText">Password</string>
    <string name="SignUp_Button">SignUp</string>
    <string name="SignIn_Text">Have already an email? sign in</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="SignIn_Button">SignIn</string>
    <string name="SignUp_Text">Have not already an email? sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="send_button_label">Send</string>
    <string name="Profile_Message"> Private Chat</string>
    <string name="Profile_IEEEChatting">IEEECUSB Chat</string>
    <string name="Profile_Committee">Committee Chat</string>
    <string name="NEWS_CHANNEL_ID">news</string>
    <string name="CHANNEL_NEWS">News</string>
    <string name="CHANNEL_DESCRIPTION">Get informed with new updates</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id" translatable="false">default_notification_channel_id</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="data_type">data_type</string>

    <!-- FCM Related Strings -->
    <string name="direct_message">direct_message</string>
    <string name="data_message">message</string>
    <string name="data_title">title</string>
    <string name="data_message_id">message_id</string>
    <string name="title_activity_announcement_display">AnnouncementDisplayActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>

    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string-array name="CommitteesList">
        <item>Select ur committee</item>
        <item>High board</item>
        <item>Technical Committee</item>
        <item> Embedded Committee</item>
        <item> IT Committee</item>
        <item> HR Committee</item>
        <item> Marketing Committee</item>
        <item> Media Committee</item>
        <item> PR Committee</item>
        <item> FR Committee</item>
    </string-array>
    <string-array name="Postition">
        <item>Select ur position</item>
        <item>Chairman</item>
        <item>Chairman Vice</item>
        <item>Technical Manager</item>
        <item>Technical Vice</item>
        <item>Head</item>
        <item>Vice</item>
        <item>Member</item>
    </string-array>
</resources>
